changement Base64 par DataTypeConverter